--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@
     font-size: 10px;
     background-color: #191919;
 }
- {
+.App {
     position: relative;
     overflow: hidden;
     min-height: 100%;
